@@ -586,6 +586,8 @@ Priority: Medium
 -- Mech or Combat vehicle?
 -- Ground only?
 
+- Jumping filter?
+
 - Infantry transport capability?
 
 - Type_list is broken for combat vehicles.
